--- a/README
+++ b/README
@@ -1,1 +1,17 @@
-# Offical Ultimate League RP bot
+#Life In The Bronx
+
+- Fun Discord Bot
+- Adding Features everyday (for now)
+- very interactive
+
+
+**Main Features**
+first use /join to become apart of the bronx, every player is assigned wiht a class. Different clases have different special perks and abilities
+
+
+**Current Classes**
+- Tank --> Provides 15 extra hp
+- Fighter --> Feature not complete yet
+- Fatty --> Feature not complete yet
+
+version: 1.0
